--- a/VegaIT- project2/HTML/Index.html
+++ b/VegaIT- project2/HTML/Index.html
@@ -161,9 +161,9 @@
                   <!--OPINIONS-->
                   <div class="opinions__nonscrollable-container">
                 <div class="opinions__comments-container">
-                        <!--Opinion1-->
-                        <div class="opinions__slider">
-                            <div class="opinions__slide opinions__slide--1">
+         <div class="opinions__slider">
+                                  <!--Opinion1-->
+                <div class="opinions__slide opinions__slide--1 active-slide">
                     <div class="opinions__secondary-container">
                         <div class="opinions__quoted-text opinions__quoted-top">
                             <div class="opinions__quoteOpen"></div>
@@ -228,16 +228,18 @@
                     </div>
                 </div>
             </div>
-        </div>
+         </div>
                      <!--Opinion_BTn-->
                      <div class="opinions__sliderBtn-wrap">
                 <div class="opinions__btn-wrap">
-                    <button type="button" class="opinions__btn opinions__btn--previous">
+                    <button class="opinions__btn opinions__btn--previous disabled">
                         <i class="opinions__icon material-icons">arrow_back</i>
                     </button>
-                        <span role="button" value="1" name="radio-btn" class="opinions__radio" id="radio1"></span>
-                        <span role="button" value="2" name="radio-btn" class="opinions__radio" id="radio2"></span>
-                        <span role="button" value="3" name="radio-btn" class="opinions__radio" id="radio3"></span>
+                      <div class="opinions__dots">
+                        <span class="opinions__radio active-dot"></span>
+                        <span class="opinions__radio"></span>
+                        <span class="opinions__radio"></span>
+                      </div>
                     <button class="opinions__btn opinions__btn--next">
                         <i class="opinions__icon material-icons">arrow_forward</i>
                     </button>
@@ -342,9 +344,9 @@
                     <i tabindex="0" class="zmdi zmdi-facebook zmdi-hc-2x"></i>
                 </div>
                 <div class="footer__links">
-                    <p class="footer__link-text"><a  class="footer__link" href="#/">Cookies</a></p>
-                    <p class="footer__link-text"><a  class="footer__link" href="#/">Sitemap</a></p>
-                    <p class="footer__link-text"><a  class="footer__link" href="#/">Privacy policy</a></p>
+                    <p class="footer__link-text"><a class="footer__link" href="#/">Cookies</a></p>
+                    <p class="footer__link-text"><a class="footer__link" href="#/">Sitemap</a></p>
+                    <p class="footer__link-text"><a class="footer__link" href="#/">Privacy policy</a></p>
                 </div>
             </div>
             </div>
